       client code. 
 [***] Changes requiring important modifications to existing client code.
   
   [D] Changes affect a method or property which was previously marked as 
       deprecated.

  December XX, 2004
 - Release of version 1.3alpha-4

 - Fixed Bugzilla 15198: TelnetAppender: NullPointerException if
   SocketHandler not initialized.


  November 25, 2004

 - Release of version 1.3alpha-3
 
 - Classes are built with the javac debug setting on.
 - Fixed unset activeFile bug in SlidingWindowRollingPolicy.
 
  November 25, 2004

 - Release of version 1.3alpha-2
 
 - The deprecated DOMConfigrator was mistakenly left as the default
   configrator for XML files.  This has been fixed and JoranConfigrator
   now is the default configrator for XML files.
 
 November 24th, 2004

 - Release of version 1.3alpha-1

 - Log4j now uses itself for its own logging. For more details refer to
   
     http://www.qos.ch//logging/internalLogging.jsp

 - The Appender.requiresLayout() method is no longer needed.

   This method was only used by PropertConfigrurator and not
   DOMConfigurator nor JoranConfigurator. It was never strictly necessary
   and case the layout is *optional* for a given appender type, it causes
   unwarranted error messages.

   This simplification will make it slightly easier to write appenders.

 - Added new printing methods message supporiting pattern parsing. These new forms 
   avoid superflous parameter construction and yield a significant performance 
   increase in the case of disavled log statements. [*]
   
 - Added new ListAppender & ListModelAppender classes to the org.apache.log4j.varia package.  
   These are rather simplistic Appender implementations that store LoggingEvents in
   an internal buffer (java.util.List and a DefaultListModel respectively) which can 
   be useful in certain applications (such as a Swing GUI app etc). [*]
   
 - org.apache.log4j.HTMLLayout has been replaced with org.apache.log4j.html.HTMLLayout.